# aiogram-template

./: .env.dist  .gitignore  alembic.ini  config.py  main.py  pyproject.toml
src/dto/: base.py  user.py
src/handlers/: __init__.py
src/handlers/commands/: __init__.py  start.py
src/infrastructure/database/: __init__.py  factory.py
src/infrastructure/database/alembic/: env.py
src/infrastructure/database/dao/: __init__.py  holder.py
src/infrastructure/database/dao/rdb/: base.py  user.py
src/infrastructure/database/models/: __init__.py  base.py  user.py
src/middlewares/: __init__.py  database.py
